--- a/src/Presentation/SmartStore.Web/Views/Catalog/CategoryNavigation.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/CategoryNavigation.cshtml
@@ -64,7 +64,7 @@
                 <a href="@url">@node.Value.Text
                     @if ((node.Value.ElementsCount ?? 0) > 0)
                     {
-                        <text> (@(node.Value.ElementsCount))</text>
+                        <text> (@(node.Value.ElementsCount.Value.ToString("N0")))</text>
                     }
                 </a>
                 @if (ShouldRenderChildren(state))
