--- a/src/Presentation/SmartStore.Web/Administration/Views/Category/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Category/_CreateOrUpdate.cshtml
@@ -81,6 +81,15 @@
 							</button>
                         </td>
                     </tr>
+                     <tr>
+                         <td class="adminTitle">
+                             @Html.SmartLabelFor(model => model.Locales[item].BadgeText)
+                         </td>
+                         <td class="adminData">
+                             @Html.EditorFor(model => Model.Locales[item].BadgeText)
+                             @Html.ValidationMessageFor(model => model.Locales[item].BadgeText)
+                         </td>
+                     </tr>
                     <tr>
                         <td colspan="2">
                             @Html.HiddenFor(model => model.Locales[item].LanguageId)
@@ -135,10 +144,29 @@
 							</button>
 						</td>
 					</tr>
+                     <tr>
+                         <td class="adminTitle">
+                             @Html.SmartLabelFor(model => model.BadgeText)
+                         </td>
+                         <td class="adminData">
+                             @Html.EditorFor(model => model.BadgeText)
+                             @Html.ValidationMessageFor(model => model.BadgeText)
+                         </td>
+                     </tr>
                 </table>
 	))
 
     <table class="adminContent">
+
+        <tr>
+            <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.BadgeStyle)
+            </td>
+            <td class="adminData">
+                @Html.DropDownListFor(model => model.BadgeStyle, Model.AvailableBadgeStyles)
+                @Html.ValidationMessageFor(model => model.BadgeStyle)
+            </td>
+        </tr>
         <tr>
             <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.Alias)
