--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/ShoppingCart/Wishlist.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/ShoppingCart/Wishlist.cshtml
@@ -74,25 +74,36 @@
 		<td class="unit-price text-nowrap">
 			<span class="product-unit-price">@item.UnitPrice</span>
 		</td>
-		<td class="text-nowrap">
+		<td class="text-nowrap" style="width:170px">
 			@if (Model.IsEditable)
 			{
 				if (item.AllowedQuantities.Count > 0)
 				{
-				<select name="itemquantity@(item.Id)" class="qty-dropdown noskin">
-					@foreach (var qty in item.AllowedQuantities)
-					{
-						<option selected="@qty.Selected" value="@qty.Value">@qty.Value</option>
-					}
-				</select>
+				    <select name="itemquantity@(item.Id)" class="qty-dropdown noskin">
+					    @foreach (var qty in item.AllowedQuantities)
+					    {
+						    <option selected="@qty.Selected" value="@qty.Value">@qty.Value</option>
+					    }
+				    </select>
 				}
 				else
 				{
-					<input name="itemquantity@(item.Id)" type="text" value="@(item.Quantity)" class="qty-input"/>
-				}
-			}
-			else
-			{
+					<input id="itemquantity@(item.Id)" name="itemquantity@(item.Id)" type="text" value="@(item.Quantity)" class="qty-input"/>
+
+                    <script type="text/javascript">
+                        $(function () {
+                            //TODO NewAlpha: implement step in admin product detail
+                            $("#itemquantity@(item.Id)").TouchSpin({
+                                min: @item.MinOrderAmount,
+                                max: @item.MaxOrderAmount,
+                                step: 1
+                            });
+                        });
+                    </script>
+                }
+            }
+            else
+            {
 				<span>@item.Quantity</span>
 			}
 		</td>
