Show task scheduler status in System > Warnings. New menu item 'Clear database cache'. Several enhancements.

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -1170,39 +1170,12 @@ table.order-edit td {
 
 
 /* WARNINGS */
-.system-warnings ul {
-    padding-left: 5px;
-}
-.system-warnings .inprogress, .system-warnings .pass, .system-warnings .fail, .system-warnings .warning {
-    padding-left: 40px;
-    display: block;
-    min-height: 35px;
-    font-size: 120%;
-    vertical-align: middle;
-}
-.system-warnings .fa {
-	font-size: 22px;
-}
-.system-warnings .pass .fa {
-	color: @green;
-}
-.system-warnings .warning .fa {
-	color: @yellow;
-}
-.system-warnings .fail .fa {
-	color: @red;
+.system-warnings {
+	font-size: 1.2em;
 }
 
-.system-warnings .error {
-    color: Red;
-}
-.system-warnings .suggestion {
-    color: Red;
-    font-style: italic;
-    font-size: 120%;
-}
-.system-warnings ul {
-    list-style: none;
+.system-warnings li {
+	margin-bottom: 0.8em;
 }
 
 
